<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fragment_add_todo_paddings">

    <RadioButton
        android:id="@+id/cb_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@id/til_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintStart_toEndOf="@id/cb_completed"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/hint_task_title"
            android:maxLines="1"
            android:textSize="11sp"
            tools:text="Do homework" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_add"
        style="@style/PrimaryImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_paper_airplane"
        app:layout_constraintBottom_toBottomOf="@id/til_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_title" />

    <!--    todo fix nested hierarchy-->
    <HorizontalScrollView
        android:id="@+id/horizontal_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_title">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_set_categories"
                    style="@style/MaterialButtonWithIcon.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_set_categories"
                    app:icon="@drawable/ic_categories" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_set_deadline"
                    style="@style/MaterialButtonWithIcon.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_set_deadline"
                    app:icon="@drawable/ic_schedule" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_set_reminder"
                    style="@style/MaterialButtonWithIcon.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_set_reminder"
                    app:icon="@drawable/ic_baseline_notifications_none_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_set_repeating"
                    style="@style/MaterialButtonWithIcon.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_set_period"
                    app:icon="@drawable/ic_baseline_repeat_24" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </FrameLayout>
    </HorizontalScrollView>

    <Spinner
        android:id="@+id/spinner_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_view" />

</androidx.constraintlayout.widget.ConstraintLayout>


