<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    android:padding="@dimen/fragment_default_margin_horizontal">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_list_title, btn_clear_all" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_find_by_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_black_border"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/search_hint" />

    <TextView
        android:id="@+id/tv_list_title"
        style="@style/Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/rv_item_padding"
        android:layout_marginTop="@dimen/fragment_default_margin_top"
        android:text="@string/tasks_notes"
        app:layout_constraintEnd_toStartOf="@id/btn_clear_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_clear_all"
        style="@style/ButtonClearAll"
        android:contentDescription="@string/clear_all"
        app:layout_constraintBottom_toBottomOf="@id/tv_list_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_list_title"
        app:layout_constraintTop_toTopOf="@id/tv_list_title" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_add_category"
        style="@style/ChipCategoryStyle.AddCategory" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_categories"
        style="@style/CategoryFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:constraint_referenced_ids="chip_add_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_find_by_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flow_categories"
        tools:listitem="@layout/item_todo" />

    <include layout="@layout/state_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>
