<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_blue"
        android:paddingHorizontal="@dimen/fragment_default_margin_horizontal"
        android:paddingTop="@dimen/fragment_default_margin_horizontal">

        <TextView
            android:id="@+id/tv_list_title"
            style="@style/Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/rv_item_padding"
            android:layout_marginTop="@dimen/fragment_default_margin_top"
            android:text="@string/notes"
            app:layout_constraintEnd_toStartOf="@id/spinner_sort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/note_sort_order"
            app:layout_constraintBottom_toBottomOf="@id/tv_list_title"
            app:layout_constraintStart_toEndOf="@id/tv_list_title"
            app:layout_constraintTop_toTopOf="@id/tv_list_title" />

        <!--        <ImageButton-->
        <!--            android:id="@+id/btn_sort_notes"-->
        <!--            style="@style/ButtonSort"-->
        <!--            android:contentDescription="@string/sort_notes"-->
        <!--            app:layout_constraintBottom_toBottomOf="@id/tv_list_title"-->
        <!--            app:layout_constraintStart_toEndOf="@id/tv_list_title"-->
        <!--            app:layout_constraintTop_toTopOf="@id/tv_list_title" />-->

        <ImageButton
            android:id="@+id/btn_clear_all"
            style="@style/ButtonClearAll"
            android:contentDescription="@string/clear_all_notes"
            app:layout_constraintBottom_toBottomOf="@id/tv_list_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/spinner_sort"
            app:layout_constraintTop_toTopOf="@id/tv_list_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_notes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/fragment_default_margin_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_list_title"
            tools:listitem="@layout/item_note" />

        <include layout="@layout/state_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:contentDescription="@string/add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fragment_default_margin_horizontal"
        android:backgroundTint="@color/black"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
