<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dialog_margin"
    android:padding="@dimen/fragment_default_margin_horizontal">

    <TextView
        android:id="@+id/tv_add_category_title"
        style="@style/Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollview_colors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_category_title">

        <RadioGroup
            android:id="@+id/rg_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb_blue"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_blue" />

            <RadioButton
                android:id="@+id/rb_blue1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_blue" />

            <RadioButton
                android:id="@+id/rb_blue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_blue" />

            <RadioButton
                android:id="@+id/rb_blue3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_blue" />

            <RadioButton
                android:id="@+id/rb_blue5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_blue" />

            <RadioButton
                android:id="@+id/rb_blue6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_blue" />

            <RadioButton
                android:id="@+id/rb_purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_purple" />

            <RadioButton
                android:id="@+id/rb_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_red" />

            <RadioButton
                android:id="@+id/rb_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_orange" />

            <RadioButton
                android:id="@+id/rb_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_pink" />

            <RadioButton
                android:id="@+id/rb_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/category_green" />
        </RadioGroup>
    </HorizontalScrollView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_category_title">

        <EditText
            android:id="@+id/et_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_category"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="11sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_new_category"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/btn_add_new_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollview_colors" />


</androidx.constraintlayout.widget.ConstraintLayout>
